syntax = "proto3";
package tutorial;

import "google/protobuf/timestamp.proto";

option go_package = "pb/";

service UserService {
  rpc GetUser (UserId) returns (User) {}
}

message UserId {
  string id = 1;
}

message User {
  UserId id = 1;  // Unique ID number for this person.
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp last_updated = 4;
}