syntax = "proto3";
package fastwriting;

import "models/query.proto";
import "models/user.proto";
import "models/contents.proto";

option go_package = "fast-writing/pkg/pb/";

service UserService {
  rpc GetUser (models.UserId) returns (models.User) {}
  rpc CreateUser (models.User) returns (models.UserId) {}
  rpc UpdateUser (models.User) returns (models.UserId) {}
}

service WritingService {
  rpc GetContents (models.ContentsId) returns (models.Contents) {}
  rpc GetContentsList (models.ContentsQueryParams) returns (models.ContentsList) {}
  rpc GetUserContentsList (models.UserContentsQueryParams) returns (models.ContentsList) {}
  rpc CreateUserContents (CreateContentsRequest) returns (CreateContentsResponse) {}
  rpc DeleteUserContents (DeleteContentsRequest) returns (DeleteResponse) {}
}

message CreateContentsRequest {
  models.Contents contents = 1;
  models.UserId userId = 2;
}

message CreateContentsResponse {
  bool created  = 1;
  string message = 2;
  models.Contents contents = 3;
}

message DeleteContentsRequest {
  models.ContentsId contentsId = 1;
}

message DeleteResponse {
  bool deleted  = 1;
  string message = 2;
}
